--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,8 @@
     "@chakra-ui/react": "^2.2.8",
     "@codemirror/autocomplete": "^6.18.0",
     "@codemirror/commands": "^6.6.1",
+    "@codemirror/language": "^6.10.2",
+    "@codemirror/search": "^6.5.6",
     "@connectrpc/connect": "^1.4.0",
     "@connectrpc/connect-query": "^1.4.1",
     "@connectrpc/connect-web": "^1.4.0",
